--- a/index.html
+++ b/index.html
@@ -3,37 +3,74 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Calculator APK Download</title>
+<title>Photo Downloading Website</title>
 <style>
     body {
         font-family: Arial, sans-serif;
-        margin: 20px;
+        margin: 0;
+        padding: 0;
+        background-color: #f2f2f2;
+    }
+    .container {
+        max-width: 1200px;
+        margin: 0 auto;
+        padding: 20px;
     }
     h1 {
+        text-align: center;
         color: #333;
     }
-    p {
-        color: #666;
+    .gallery {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+        gap: 20px;
     }
-    button {
+    .photo {
+        position: relative;
+        overflow: hidden;
+    }
+    .photo img {
+        width: 100%;
+        height: auto;
+        transition: transform 0.3s ease;
+    }
+    .photo:hover img {
+        transform: scale(1.1);
+    }
+    .download-link {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
         background-color: #4CAF50;
         color: white;
         padding: 10px 20px;
-        border: none;
+        text-align: center;
+        text-decoration: none;
         border-radius: 5px;
-        cursor: pointer;
-        font-size: 16px;
+        display: none;
     }
-    button:hover {
-        background-color: #45a049;
+    .photo:hover .download-link {
+        display: block;
     }
 </style>
 </head>
 <body>
-    <h1>Download Calculator App</h1>
-    <p>This website allows you to download a simple calculator app for your Android device.</p>
-    <p>Click the button below to download the calculator APK file:</p>
-    <a href="calculator.apk" download><button>Download Calculator</button></a>
-    <p>Note: Make sure to enable installation from unknown sources in your device settings before installing the app.</p>
+
+<div class="container">
+    <h1>Photo Gallery</h1>
+    <div class="gallery">
+        <div class="photo">
+            <img src="photo1.jpg" alt="Photo 1">
+            <a href="photo1.jpg" download class="download-link">Download</a>
+        </div>
+        <div class="photo">
+            <img src="photo2.jpg" alt="Photo 2">
+            <a href="photo2.jpg" download class="download-link">Download</a>
+        </div>
+        <!-- Add more photos with download links as needed -->
+    </div>
+</div>
+
 </body>
 </html>
