--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
     <div class="gallery">
         <div class="photo">
             <img src="photo1.jpg" alt="Photo 1">
-            <a href="photo1.jpg" download class="download-link">Download</a>
+            <a href="photo1.jpg" download class="https://github.com/ManikandanMariyappan/Home.github.io./blob/main/Photo1.jpg">Download</a>
         </div>
         <div class="photo">
             <img src="photo2.jpg" alt="Photo 2">
-            <a href="photo2.jpg" download class="download-link">Download</a>
+            <a href="photo2.jpg" download class="https://github.com/ManikandanMariyappan/Home.github.io./blob/main/Photo2.jpg">Download</a>
         </div>
         <!-- Add more photos with download links as needed -->
     </div>
