--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
     <h1>Photo Gallery</h1>
     <div class="gallery">
         <div class="photo">
-            <img src="photo1.jpg" alt="Photo 1">
-            <a href="photo1.jpg" download class="https://github.com/ManikandanMariyappan/Home.github.io./blob/main/Photo1.jpg">Download</a>
+            <img src="https://drive.google.com/file/d/1XlJIUtpHqX1Ye0fstSRkpyT4b49zAmdj/view?usp=drive_link" alt="Photo 1">
+            <a href="photo1.jpg" download class="https://drive.google.com/file/d/1XlJIUtpHqX1Ye0fstSRkpyT4b49zAmdj/view?usp=drive_link">Download</a>
         </div>
         <div class="photo">
             <img src="photo2.jpg" alt="Photo 2">
