--- a/index.html
+++ b/index.html
@@ -12,63 +12,38 @@
         background-color: #f2f2f2;
     }
     .container {
-        max-width: 1200px;
+        max-width: 800px;
         margin: 0 auto;
         padding: 20px;
+        text-align: center;
     }
     h1 {
-        text-align: center;
         color: #333;
     }
-    .gallery {
-        display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-        gap: 20px;
-    }
     .photo {
-        position: relative;
-        overflow: hidden;
+        margin-bottom: 20px;
     }
     .photo img {
-        width: 100%;
+        max-width: 100%;
         height: auto;
-        transition: transform 0.3s ease;
-    }
-    .photo:hover img {
-        transform: scale(1.1);
     }
     .download-link {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
         background-color: #4CAF50;
         color: white;
         padding: 10px 20px;
         text-align: center;
         text-decoration: none;
         border-radius: 5px;
-        display: none;
-    }
-    .photo:hover .download-link {
-        display: block;
     }
 </style>
 </head>
 <body>
 
 <div class="container">
-    <h1>Photo Gallery</h1>
-    <div class="gallery">
-        <div class="photo">
-            <img src=https://ibb.co/0ZZW6Zt alt="Photo 1">
-            <a href="photo1.jpg" download class=https://ibb.co/0ZZW6Zt>Download</a>
-        </div>
-        <div class="photo">
-            <img src="photo2.jpg" alt="Photo 2">
-            <a href="photo2.jpg" download class="https://github.com/ManikandanMariyappan/Home.github.io./blob/main/Photo2.jpg">Download</a>
-        </div>
-        <!-- Add more photos with download links as needed -->
+    <h1>Photo Downloading Website</h1>
+    <div class="photo">
+        <img src="https://i.ibb.co/0ZZW6Zt/landscape.jpg" alt="Photo">
+        <a href="https://i.ibb.co/0ZZW6Zt/landscape.jpg" download class="download-link">Download Photo</a>
     </div>
 </div>
 
