--- a/index.html
+++ b/index.html
@@ -42,10 +42,17 @@
 <div class="container">
     <h1>Photo Downloading Website</h1>
     <div class="photo">
-        <img src="https://i.ibb.co/0ZZW6Zt/landscape.jpg" alt="Photo">
+        <img src="https://i.ibb.co/0ZZW6Zt/landscape.jpg" alt="Photo 1">
         <a href="https://i.ibb.co/0ZZW6Zt/landscape.jpg" download class="download-link">Download Photo</a>
     </div>
+     <div class="photo">
+            <img src="https://i.ibb.co/YfSNWn5/landscape.jpg" alt="Photo 2">
+            <a href="https://i.ibb.co/YfSNWn5/landscape.jpg" download class="https://i.ibb.co/YfSNWn5/landscape.jpg">Download Photo</a>
+      </div>
+
 </div>
 
 </body>
 </html>
+
+https://ibb.co/YfSNWn5
