--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <body>
 
 <div class="container">
-    <h1>Colorful Photo Downloading Website</h1>
+    <h1>Prem & Praveen</h1>
     <div class="photo">
         <img src="https://i.ibb.co/YfSNWn5/photo1.jpg" alt="Photo 1">
         <a href="https://i.ibb.co/YfSNWn5/photo1.jpg" download class="download-link">Download Photo 1</a>
